# telegram-chat-summarize

./: .gitignore  README.md  main.py  pyproject.toml
completion/: claude_completion_service.py  completion_service.py  openai_completion_service.py
