[tool.poetry]
name = "chat-summarize"
version = "0.1.0"
description = "A bot that will summarize the telegram group message and output daliy/weekly digest."
authors = ["Iver Liu <iver.quest@gmail.com>"]
license = "MIT"
readme = "README.md"
packages = [{include = "chat_summarize"}]

[tool.poetry.dependencies]
python = "^3.10"
python-dotenv = "^1.0.0"
python-telegram-bot = "^20.2"
telethon = "^1.28.5"
openai = "^0.27.6"
pytz = "^2023.3"
anthropic = "^0.2.9"


[tool.poetry.group.dev.dependencies]
autopep8 = "^2.0.2"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
